# tetraOS

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  buildAndRun.sh  buildFromHand.sh  clean_root_fs.sh  clearBuild.sh  qemu.sh  rebuild.sh  todo.md  uboot.txt
Kernel/: CMakeLists.txt  klib.h  kprintf.cpp  linker.ld  main.cpp  page.cpp  page.h  uart.cpp  uart.h
Kernel/asm/: boot.S  mem.S
LibC/: CMakeLists.txt
LibC/include/: stdio.h
LibC/stdio/: printf.cpp  putchar.cpp
build_out_hand/: kernel.elf  main.cpp.o.d
docs/syscalls/: syscalls.md
kernel/: .gdbinit  .gitignore  CMakeLists.txt  UART.cpp  UART.h  boot.s  compile_commands.json  context.c  context.h  exception.cpp  exception.h  exception.s  linker.ld  mem.s  memory.h  os  os.cpp  os.h  physical_allocator.cpp  processor.h  vfs.cpp  vfs.h
kernel/arch/riscv64/: processor.cpp
kernel/drivers/: CMakeLists.txt  ext2.cpp  ext2.h
kernel/drivers/virtio/: blk.cpp  blk.h  console.cpp  console.h  virtio.h
kernel/include/: memory.h  os.h
kernel/include/drivers/virtio/: blk.h  virtio.h
kernel/include/libk/: kstdio.h  list.h  printf.h
kernel/io/: CMakeLists.txt  virtio.cpp
kernel/libk/: .gitignore  CMakeLists.txt  kstdio.h  list.cpp  list.h  logging.cpp  printf.cpp  read.cpp
kernel/memory/: CMakeLists.txt  memory.cpp  paging.cpp  paging.s  physical_allocator.cpp  virtual_allocator.cpp
kernel/process/: CMakeLists.txt  elf.h  process.cpp  process.h  process.s  scheduler.cpp  scheduler.h
kernel/syscalls/: CMakeLists.txt  syscall.cpp  syscall.h
plan/: general.md  memory.md  paging.md  toolchain.md  userspace.md
rootFS/: testfile.txt
rootFS/folder1/folder2/folder3/: file.txt
rootFS/home/user/: user_file.txt
tlib/: String.h  stdarg.h  stddef.h  stdint.h
tlibc/: .clangd  compile_and_build_tlibc.sh  crt0.s  init.c  malloc.c  printf.c  string.c  tlibc.h
tlibc/include/: fcntl.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
tlibc/include/sys/: stat.h  syscall.h  types.h
tlibc/syscalls/: getcwd.c  open.c  read.c  sbrk.c  syscall.c  write.c
toolchain/: .gitignore  Dockerfile  binutils.patch  gcc.patch  start_ubuntu.sh
userspace/: .clangd  compile_and_build_userspace.sh  tetraos.cmake
userspace/shell/: CMakeLists.txt  builtins.c  builtins.h  shell.c
